--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -17,8 +17,8 @@
         left: 0;
         height: 100vh;
         width: 200px;
-        background-color: #1877f2;
-        color: #fff;
+        background-color: #DDE2E3 ;
+        color: #132846;
         padding: 20px;
       }
       .navbar ul {
@@ -29,7 +29,7 @@
       .navbar ul li {
         padding: 10px;
         font-size: 18px;
-        border-bottom: 1px solid #fff;
+        border-bottom: 1px solid #132846;
       }
       .navbar ul li:hover {
         background-color: #d6d6d683;
@@ -44,6 +44,9 @@
   <body>
     <div class="navbar">
       <ul>
+        <span class="image">
+          <img src="https://static.wixstatic.com/media/cf69b3_42e3b48151034294ae0d438c9b5c907c~mv2.png" alt="">
+        </span>
         <li>Home</li>
         <li>About</li>
         <li>Events</li>
@@ -51,7 +54,7 @@
       </ul>
     </div>
     <div class="content">
-      <!-- Your content goes here -->
+      Content
     </div>
   </body>
 </html>
